--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ nav {
 
 /* Link hover color */
 .nav-links a:hover {
-    color: #2599dd;
+    color: #000000;
     /* Light blue color when hovered */
 }
 
