--- a/style.css
+++ b/style.css
@@ -436,7 +436,7 @@ select:focus {
 .submit-btn {
     width: 100%;
     /* Full width button */
-    background-color: #122c53;
+    background-color: #218838;
     /* Dark blue background */
     color: white;
     /* White text */
